# LyoBackEndNew

./: COMPLETION.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  PROGRESS.md  README.md  SECURITY.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
api/: __init__.py
api/core/: AI_IMPROVEMENTS.md  __init__.py  ai_config.py  avatar.py  classroom.py  config.py  content_assembly.py  content_moderation.py  content_retrieval.py  docs.py  error_utils_ai.py  errors.py.tmp  errors_ai.py  experiments.py  i18n.py  logging.py  resource_manager.py  security.py  telemetry.py  tiered_computation.py
api/db/: __init__.py  avatar_cache.py  avatar_firestore.py  firestore.py  sql.py
api/examples/: ai_error_handling_examples.py  ai_integration_examples.py
api/middlewares/: __init__.py  rate_limit.py  request_id.py
api/models/: __init__.py  feed.py  story.py
api/routers/: __init__.py  ads.py  ai.py  ai_avatar.py  auth.py  content.py  feed.py  health.py  notifications.py  recommendation.py  story.py  user.py
api/schemas/: __init__.py  ads.py  ai.py  auth.py  base.py  content.py  feed.py  notification.py  story.py  user.py
api/services/: __init__.py  ads.py  ai.py  content.py  notification.py  recommendation.py  story.py  user.py
api/tests/: test_ai_error_handling.py  test_avatar_persistence.py  test_content_moderation.py  test_experiments.py  test_resource_manager.py  test_tiered_computation.py
scripts/: create_admin.py  create_release.sh
tests/: __init__.py  conftest.py
tests/api/: test_health.py
(+8 files in other folders)
