[tool.poetry]
name = "lyo-backend"
version = "0.1.0"
description = "AI-powered, multilingual social-learning app backend"
authors = ["Lyo Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
firebase-admin = "^6.3.0"
google-cloud-firestore = "^2.15.0"
google-cloud-pubsub = "^2.19.0"
google-cloud-storage = "^2.15.0"
redis = "^5.0.1"
httpx = "^0.27.0"
asyncio = "^3.4.3"
aioredis = "^2.0.1"
websockets = "^12.0.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-exporter-otlp = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
sqlmodel = "^0.0.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.2.2"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py312"
